@startuml

title __PRINTING's Class Diagram__\n

  namespace com.example.appkru {
    namespace printing {
      class com.example.appkru.printing.ApplicationClass {
          + onCreate()
      }
    }
  }
  

  namespace com.example.appkru {
    namespace printing {
      class com.example.appkru.printing.DeviceListActivity {
          {static} # TAG : String
          - mBluetoothAdapter : BluetoothAdapter
          - mDeviceClickListener : OnItemClickListener
          - mPairedDevicesArrayAdapter : ArrayAdapter<String>
          # onCreate()
          # onDestroy()
      }
    }
  }
  

  namespace com.example.appkru {
    namespace printing {
      class com.example.appkru.printing.UnicodeFormatter {
          {static} + byteToHex()
          {static} + charToHex()
      }
    }
  }
  

  com.example.appkru.printing.ApplicationClass -up-|> android.app.Application
  com.example.appkru.printing.DeviceListActivity -up-|> android.app.Activity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
